--- a/discovery-api-elements.html
+++ b/discovery-api-elements.html
@@ -87,7 +87,7 @@ that allow accessing them declaratively.
         apiKey: String,
 
         /**
-         * True when all elements for the specified API have been _createMethodElement
+         * True when all elements for the specified API have been created
          */
         loaded: {
           type: Boolean,
