--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <script src="../webcomponentsjs/webcomponents.min.js"></script>
+  <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="../iron-component-page/iron-component-page.html">
 
 </head>
 <body>
 
-  <iron-component-page></iron-component-page>
+  <iron-component-page src="discovery-api-docs.html" active="discovery-api-elements"></iron-component-page>
 
 </body>
 </html>
