--- a/demo/tic-tac-toe.html
+++ b/demo/tic-tac-toe.html
@@ -98,15 +98,24 @@
 
         <div hidden$="[[!signedIn]]">
           <paper-material elevation="2">
+
             <tictactoe-board-getmove
               id="moveRequest"
               body="[[requestBody(board, board.*)]]"
               response="{{computerMove}}"><tictactoe-board-getmove>
 
             <div id="board">
-              <template is="dom-repeat" items="[[items(board, board.*)]]">
-                <paper-button class="slot" on-tap="move" disabled$="[[slotDisabled(item, playerMove)]]"><span>{{item}}</span></paper-button>
+              <template is="dom-repeat" items="[[board]]">
+                <paper-button
+                  class="slot"
+                  on-tap="move"
+                  disabled$="[[slotDisabled(item.value, playerMove, gameState)]]">[[item.value]]</paper-button>
               </template>
+              <div>[[showGameState(gameState)]]</div>
+
+              <tictactoe-scores-insert body="[[scoreInsertRequest(gameState)]]" id="scoreRequest" on-success="getScores"></tictactoe-scores-insert>
+
+              <paper-button on-tap="resetGame">New game</paper-button>
             </div>
           </paper-material>
 
@@ -125,6 +134,13 @@
 
 <script>
   (function () {
+
+    var gameStates = ['', 'WON', 'LOST', 'TIE'];
+    var NOT_DONE = 0;
+    var WON = 1;
+    var LOST = 2;
+    var TIE = 3;
+
     Polymer({
       is: "tic-tac-toe",
 
@@ -144,7 +160,8 @@
         computerMove: {
           type: Object,
           observer: 'computerMoved'
-        }
+        },
+        gameState: Number
       },
 
       observers: [
@@ -166,8 +183,26 @@
       },
 
       initialise: function () {
+        this.getScores();
+        this.resetGame();
+      },
+
+      getScores: function () {
         this.$.scoresRequest.go();
-        this.board = ['-', '-', '-', '-', '-', '-', '-', '-', '-'];
+      },
+
+      resetGame: function () {
+        this.board = [
+          {value: '-'},
+          {value: '-'},
+          {value: '-'},
+          {value: '-'},
+          {value: '-'},
+          {value: '-'},
+          {value: '-'},
+          {value: '-'},
+          {value: '-'}
+        ];
         this.playerMove = true;
       },
 
@@ -175,24 +210,77 @@
         return date.substr(0,10) + " " + date.substr(11,5);
       },
 
-      slotDisabled: function (value, playerMove) {
-        return !playerMove || (value !== '-');
+      slotDisabled: function (value, playerMove, gameState) {
+        return !playerMove || (value !== '-') || (gameState > 0);
       },
 
       move: function (e) {
-        if (!this.playerMove) { return; }
-        e.model.item = 'X';
-        this.set('board.' + e.model.index, 'X');
-        this.notifyPath('board.' + e.model.index, 'X');
+        this.set('board.' + e.model.index + '.value', 'X');
+      },
+
+      getBoardIndex: function (path) {
+        var index = path.substring(path.indexOf('.') + 1);
+        index = index.substring(0, index.indexOf('.'));
+        return index;
+      },
+
+      checkRowVictory: function (slot1, slot2, slot3) {
+        if (slot1 === slot2 && slot1 === slot3) {
+          if (slot1 === 'X') return WON;
+          if (slot1 === 'O') return LOST;
+        }
+        return NOT_DONE;
+      },
+
+      computeGameState: function (board) {
+        var state, i;
+        // rows
+        for (i = 0; i < 3; i++) {
+          state = this.checkRowVictory(board[i * 3].value, board[i * 3 + 1].value, board[i * 3 + 2].value);
+          if (state !== NOT_DONE) { return state; }
+        }
+
+        // columns
+        for (i = 0; i < 3; i++) {
+          state = this.checkRowVictory(board[i].value, board[i + 3].value, board[i + 6].value);
+          if (state !== NOT_DONE) { return state; }
+        }
+
+        // first diagonal
+        state = this.checkRowVictory(board[0].value, board[4].value, board[8].value);
+        if (state !== NOT_DONE) { return state; }
+
+        // second diagonal
+        state = this.checkRowVictory(board[2].value, board[4].value, board[6].value);
+        if (state !== NOT_DONE) { return state; }
+
+        if (board.filter(function (slot) { return (slot.value === '-');}).length === 0) {
+          return TIE;
+        }
+
+        return NOT_DONE;
+      },
+
+      showGameState: function (gameState) {
+        return gameStates[gameState];
+      },
+
+      scoreInsertRequest: function (gameState) {
+        return {outcome: gameStates[gameState]};
       },
 
       boardChanged: function (e) {
+        this.gameState = this.computeGameState(this.board);
+        if (this.gameState !== NOT_DONE) {
+          this.$.scoreRequest.go();
+          return;
+        }
         if (e.path !== 'board') {
           if (this.playerMove) {
             this.playerMove = false;
             this.$.moveRequest.go();
           } else {
-            var changed = e.path.substring(e.path.indexOf('.') + 1);
+            var changed = this.getBoardIndex(e.path);
             var button = (Polymer.dom(this.$.board).querySelectorAll("paper-button")[changed]);
             Polymer.dom(button.root).querySelector("paper-ripple").simulatedRipple();
             this.playerMove = true;
@@ -203,20 +291,14 @@
       computerMoved: function (move) {
         var slots = move.state.split('');
         for (var i = 0; i < slots.length; i++) {
-          if (slots[i] !== this.board[i]) {
-            this.set('board.' + i, slots[i]);
-            this.notifyPath('board', this.board);
+          if (slots[i] !== this.board[i].value) {
+            this.set('board.' + i + '.value', slots[i]);
           }
         }
       },
 
-      items: function (board) {
-        console.log(board);
-        return board;
-      },
-
       requestBody: function (board) {
-        return {state: this.board.join('')};
+        return {state: board.map(function (slot) { return slot.value; }).join('')};
       }
     });
   }());
