Update to latest google-client-loader

--- a/discovery-api-elements.html
+++ b/discovery-api-elements.html
@@ -33,7 +33,7 @@ that allow accessing them declaratively.
       name="[[name]]"
       version="[[version]]"
       app-id="[[appId]]"
-      root="[[apiRoot]]"
+      api-root="[[apiRoot]]"
       on-google-api-load="_apiLoaded"></google-client-loader>
   </template>
 </dom-module>
