--- a/discovery-api-behaviors.html
+++ b/discovery-api-behaviors.html
@@ -15,7 +15,8 @@
         },
         auto: {
           type: Boolean,
-          value: false
+          value: false,
+          observer: '_parameterChanged'
         }
       },
 
